--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: KMK Docs
-description: An unofficial webpage for KMK-fw docs.
+title: KMKfw Docs
+description: An unofficial webpage for KMKfw docs.
 remote_theme: just-the-docs/just-the-docs
 
 url: https://kmkfw-doc.misc.place
